# whispers

./: Cargo.toml  NOTICE  README.md  config.example.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: refactor-plan.md
src/: agentic_rewrite.rs  app.rs  asr.rs  asr_model.rs  asr_protocol.rs  audio.rs  branding.rs  cleanup.rs  cli.rs  cloud.rs  completions.rs  config.rs  context.rs  error.rs  faster_whisper.rs  faster_whisper_worker.py  inject.rs  lib.rs  main.rs  model.rs  model_support.rs  nemo_asr.rs  nemo_asr_worker.py  osd.rs  osd_protocol.rs  personalization.rs  postprocess.rs  rewrite.rs  rewrite_local.rs  rewrite_model.rs  rewrite_profile.rs  rewrite_protocol.rs  rewrite_worker.rs  runtime_diagnostics.rs  runtime_guards.rs  runtime_support.rs  safe_fs.rs  session.rs  setup.rs  status.rs  (+5 more)
src/agentic_rewrite/: admin.rs  mod.rs  runtime.rs  store.rs
src/app/: mod.rs  osd.rs  runtime.rs
src/asr/: cleanup.rs  execute.rs  mod.rs  prepare.rs  validation.rs
src/audio/: dsp.rs  mod.rs  recorder.rs  tests.rs
src/cleanup/: analysis.rs  lexicon.rs  render.rs  tests.rs
src/completions/: detect.rs  render.rs  tests.rs
src/config/: edit.rs  load.rs  paths.rs  schema.rs  tests.rs
src/inject/: clipboard.rs  keyboard.rs  mod.rs  tests.rs
src/personalization/: mod.rs  rewrite.rs  store.rs
src/postprocess/: execution.rs  finalize.rs  mod.rs  planning.rs
src/rewrite/: local.rs  mod.rs  output.rs  prompt.rs  tests.rs
src/session/: mod.rs  persistence.rs  planning.rs
src/setup/: apply.rs  report.rs  select.rs  side_effects.rs  tests.rs
